--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "CatalogConnection": "Server=172.17.0.1;User Id=sa;Password=<YourStrong!Passw0rd>;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-    "IdentityConnection": "Server=172.17.0.1;User Id=sa;Password=<YourStrong!Passw0rd>;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
+    "CatalogConnection": "Server=rdb-sql-node;User Id=sa;Password=rdbStrongPass!@3;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
+    "IdentityConnection": "Server=rdb-sql-node;User Id=sa;Password=rdbStrongPass!@3;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
   },
   "CatalogBaseUrl": "",
   "Logging": {
